# mailsearch-rust

./: .gitignore  ARCHITECTURE.md  Cargo.toml  FILTER_FEATURE.md  IMPLEMENTATION_SUMMARY.md  LICENSE.txt  PERFORMANCE.md  README.md  REVIEW.md  TUI_VISUAL_GUIDE.md
info/: REVIEW.md
src/: config.rs  email.rs  highlight.rs  main.rs  models.rs  search.rs  sort.rs  tui.rs
tests/fixtures/: html_email.emlx  malformed.emlx  multipart_email.emlx  no_subject.emlx  plain_text.emlx
