[package]
name = "mailsearch"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
dirs = "6"
indicatif = { version = "0.17", features = ["rayon"] }
mailparse = "0.15"
rayon = "1.10"
regex = "1"
walkdir = "2"

[profile.release]
lto = true
codegen-units = 1
strip = true
