[package]
name = "mailsearch"
version = "0.1.0"
edition = "2021"
authors = ["Kyohei Takahashi <kcrt@kcrt.net>"]
description = "A fast full-text search tool for Apple Mail .emlx files with an interactive terminal UI"
repository = "https://github.com/kcrt/mailsearch-rust"
license = "MIT"
keywords = ["email", "search", "macos", "tui", "mail"]
categories = ["command-line-utilities", "email"]

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
dirs = "6"
indicatif = { version = "0.17", features = ["rayon"] }
mailparse = "0.15"
rayon = "1.10"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"

crossterm = "0.28"
open = "2"
ratatui = "0.29"
unicode-width = "0.2"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
